# zeron-agent-development-kit

./: .env.example  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish-go.yml  publish-npm.yml  publish-pypi.yml
01_quickstart/: index.html
02_concepts/: index.html
03_building_agents/: index.html
04_dsl_reference/: index.html
05_tools/: index.html
06_sif/: index.html
07_cli/: index.html
08_multitenancy/: index.html
09_node_go_quickstart/: index.html
adk/go/: LICENSE  Makefile  README.md  doc.go  go.mod  go.sum
adk/node/: .npmignore  CHANGELOG.md  README.md  package.json  tsconfig.json  vitest.config.ts
adk/node/src/: index.ts
adk/node/tests/: audit.test.ts  cli.test.ts  dsl.test.ts  edition.test.ts  executor.test.ts  llm-agent.test.ts  policy.test.ts  registry.test.ts  risk.test.ts  tenants.test.ts  tools.test.ts
agent_templates/: dep_patch.yaml  risk_quant.yaml  risk_scenario.yaml
demo/: slopsquatting-demo.py
docs/: 01_quickstart.md  02_concepts.md  03_building_agents.md  04_dsl_reference.md  05_tools.md  06_sif.md  07_cli.md  08_multitenancy.md  09_node_go_quickstart.md  index.md
search/: search_index.json
stylesheets/: custom.css
tests/: __init__.py
tests/fixtures/: invalid-autonomous.yaml  invalid-missing-agent.yaml  invalid-overlap.yaml  invalid-red-team.yaml  valid-generic.yaml  valid-red-team.yaml  valid-risk-quant.yaml
tests/unit/: __init__.py  test_dep_patch.py  test_dsl.py  test_edition.py  test_memory_adapter.py  test_new_agents.py  test_orchestration.py  test_policy.py  test_registry.py  test_risk_propagation.py  test_risk_scenario.py  test_tenant_activation.py  test_tools.py
tests/unit/agents/: test_slopsquatting.py
zak/: __init__.py
zak/agents/: __init__.py
zak/agents/appsec/: agent.py
zak/agents/compliance/: __init__.py  compliance_tools.py  dpdp-compliance.yaml  dpdp_agent.py  iso27001_soc2_agent.py  website_tools.py
zak/agents/dep_patch/: __init__.py  agent.py  tools.py
zak/agents/generic/: agent.py
zak/agents/prompt_injection/: README.md  payloads_v2.py  pit-v2-agent.yaml  pit_v2_agent.py
zak/agents/risk_quant/: __init__.py  agent.py
zak/agents/risk_scenario/: __init__.py  agent.py  tools.py
zak/agents/slopsquatting/: README.md  __init__.py  agent.py  slopsquatting-detector.yaml  tools.py
zak/agents/usage_metrics/: __init__.py  agent.py  metrics_tools.py  usage_metrics.yaml
zak/agents/vuln_triage/: agent.py
zak/cli/: __init__.py  main.py  templates.py
zak/core/: __init__.py  edition.py
zak/core/audit/: __init__.py  events.py  logger.py
zak/core/dsl/: __init__.py  parser.py  schema.py
zak/core/llm/: __init__.py  anthropic_client.py  base.py  google_client.py  local.py  mock_client.py  openai_client.py  registry.py
zak/core/policy/: __init__.py  engine.py
zak/core/runtime/: __init__.py  agent.py  executor.py  llm_agent.py  registry.py
zak/core/tools/: __init__.py  builtins.py  orchestration.py  substrate.py
zak/sif/: __init__.py
zak/sif/graph/: __init__.py  adapter.py  factory.py  memory_adapter.py
zak/sif/risk/: __init__.py  propagation.py
zak/sif/schema/: __init__.py  edges.py  nodes.py
zak/sif/telemetry/: __init__.py  ingestor.py
zak/tenants/: __init__.py  context.py
(+70 files in other folders)
